2012-02-29  Dirk Pranke  <dpranke@chromium.org>

        need to clone the gpu baselines and expectations into the new "virtual" dir
        https://bugs.webkit.org/show_bug.cgi?id=79956

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/port/chromium.py:
        (ChromiumPort.virtual_test_suites):

2012-02-29  Mark Rowe  <mrowe@apple.com>

        Switch to using json rather than simplejson now that the master is using Python 2.7.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (loadBuilderConfig):

2012-02-29  David Levin  <levin@chromium.org>

        [chromium] Add the ability to turn off autoresize.
        https://bugs.webkit.org/show_bug.cgi?id=77452

        Reviewed by Darin Fisher.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController): Expose a way to turn off auto-resize.
        (LayoutTestController::enableAutoResizeMode): Ditto and adjust to new WebKit api.
        (LayoutTestController::disableAutoResizeMode):  Ditto.
        * DumpRenderTree/chromium/LayoutTestController.h: Ditto.

2012-02-29  Dirk Pranke  <dpranke@chromium.org>

        nrwt: make --print trace work with virtual tests
        https://bugs.webkit.org/show_bug.cgi?id=79952

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/views/printing.py:
        (Printer._print_test_trace):
        (Printer._print_baseline):

2012-02-28  Brian Weinstein  <bweinstein@apple.com>

        WebKit2: didNewFirstVisuallyNonEmptyLayout should be sent to injected bundle
        https://bugs.webkit.org/show_bug.cgi?id=79849

        Reviewed by Beth Dakin.

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::InjectedBundlePage): Add an entry to the struct.

2012-02-29  Lucas Forschler  <lforschler@apple.com>

        Removed unused Apple buildslaves from the master configuration